chore(all): fix letter-spacing

--- a/projects/addon-mobile/components/mobile-calendar/mobile-calendar.style.less
+++ b/projects/addon-mobile/components/mobile-calendar/mobile-calendar.style.less
@@ -58,7 +58,7 @@
         font-size: 0.9375rem;
         line-height: 1.125rem;
         font-weight: 400;
-        letter-spacing: 0.1.8125rem;
+        letter-spacing: 0.018125rem;
         text-transform: none;
 
         &_close {
@@ -76,13 +76,13 @@
     font-size: 1.25rem;
     line-height: 3.5rem;
     font-weight: 500;
-    letter-spacing: -0.125rem;
+    letter-spacing: -0.0125rem;
     white-space: nowrap;
 
     :host._ios & {
         font-size: 1.0625rem;
         font-weight: 600;
-        letter-spacing: -0.2.5625rem;
+        letter-spacing: -0.025625rem;
         text-align: center;
     }
 }
@@ -109,7 +109,7 @@
     flex-shrink: 0;
     font-size: 0.9375rem;
     font-weight: 700;
-    letter-spacing: 0.1.5625rem;
+    letter-spacing: 0.015625rem;
     cursor: pointer;
     opacity: 0.1;
     transform: scale(0.73);
@@ -181,7 +181,7 @@
         text-transform: none;
         font-size: 1.375rem;
         line-height: 3.125rem;
-        letter-spacing: 0.2rem;
+        letter-spacing: 0.02rem;
         font-weight: 700;
     }
 }
