--- a/projects/core/styles/mixins/textfield.less
+++ b/projects/core/styles/mixins/textfield.less
@@ -119,7 +119,7 @@
         :host[data-tui-host-size='m'] & {
             width: 118%;
             transform: translateY(-0.5rem) scale(0.85);
-            letter-spacing: 0.25rem;
+            letter-spacing: 0.025rem;
         }
 
         :host._invalid:not(._focused) &,
