--- a/projects/kit/components/tabs/tab/tab.style.less
+++ b/projects/kit/components/tabs/tab/tab.style.less
@@ -84,7 +84,7 @@
         opacity: 0.5;
         font-size: 0.875rem;
         font-weight: 500;
-        letter-spacing: -0.8125rem;
+        letter-spacing: -0.008125rem;
         font-family: -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
 
         &:hover {
@@ -111,7 +111,7 @@
         opacity: 1;
         font-size: 0.8125rem;
         font-weight: 500;
-        letter-spacing: -0.5rem;
+        letter-spacing: -0.005rem;
         font-family: -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
 
         &:hover {
